--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        
-        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="shortcut icon" type="image/png" href="img/favicon.png">
-        
-        <title>nexter &mdash; your home, your freedom</title>
-    </head>
-    <body class="container">
-    <div class="sidebar">Sidebar</div> 
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+
+    <title>nexter &mdash; your home, your freedom</title>
+</head>
+
+<body class="container">
+    <div class="sidebar">Sidebar</div>
     <header class="header">
         Header
     </header>
@@ -20,7 +22,66 @@
         Realtors
     </div>
     <section class="features">
-        Features
+        <div class="feature">
+            <svg class="feature__icon">
+                <use xlink:href="./img/sprite.svg#icon-global"></use>
+            </svg>
+            <h4 class="heading-4">World's Best Luxury Homes</h4>
+            <p class="feature__text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus possimus earum neque quis hic vel cumque
+                obcaecati culpa itaque minima.
+            </p>
+        </div>
+        <div class="feature">
+            <svg class="feature__icon">
+                <use xlink:href="./img/sprite.svg#icon-trophy"></use>
+            </svg>
+            <h4 class="heading-4">Only the best homes</h4>
+            <p class="feature__text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus possimus earum neque quis hic vel cumque
+                obcaecati culpa itaque minima.
+            </p>
+        </div>
+        <div class="feature">
+            <svg class="feature__icon">
+                <use xlink:href="./img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <h4 class="heading-4">All Top Location</h4>
+            <p class="feature__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut consectetur sed maxime quos nisi quidem
+                placeat soluta accusantium quia.
+            </p>
+        </div>
+        <div class="feature">
+            <svg class="feature__icon">
+                <use xlink:href="./img/sprite.svg#icon-presentation"></use>
+            </svg>
+            <h4 class="heading-4">top 1% realtors</h4>
+            <p class="feature__text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus possimus earum neque quis hic vel cumque
+                obcaecati culpa itaque minima.
+            </p>
+        </div>
+        <div class="feature">
+            <svg class="feature__icon">
+                <use xlink:href="./img/sprite.svg#icon-lock"></use>
+            </svg>
+            <h4 class="heading-4">Secure Payments on Nexture</h4>
+            <p class="feature__text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus possimus earum neque quis hic vel cumque
+                obcaecati culpa itaque minima.
+            </p>
+        </div>
+        <div class="feature">
+            <svg class="feature__icon">
+                <use xlink:href="./img/sprite.svg#icon-key"></use>
+            </svg>
+            <h4 class="heading-4">Move in within a week</h4>
+            <p class="feature__text">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus possimus earum neque quis hic vel cumque
+                obcaecati culpa itaque minima.
+            </p>
+        </div>
     </section>
     <div class="story_pictures">
         Story Pictures
@@ -36,4 +97,5 @@
     </section>
     <footer class="footer">Footer</footer>
 </body>
+
 </html>
