--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             <svg class="feature__icon">
                 <use xlink:href="./img/sprite.svg#icon-global"></use>
             </svg>
-            <h4 class="heading-4">World's Best Luxury Homes</h4>
+            <h4 class="heading-4 heading-4--dark">World's Best Luxury Homes</h4>
             <p class="feature__text">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus possimus earum neque quis hic vel cumque
                 obcaecati culpa itaque minima.
             </p>
         </div>
         <div class="feature">
-            <svg class="feature__icon">
+            <svg class="feature__icon heading-4--dark">
                 <use xlink:href="./img/sprite.svg#icon-trophy"></use>
             </svg>
             <h4 class="heading-4">Only the best homes</h4>
@@ -43,7 +43,7 @@
             </p>
         </div>
         <div class="feature">
-            <svg class="feature__icon">
+            <svg class="feature__icon heading-4--dark">
                 <use xlink:href="./img/sprite.svg#icon-map-pin"></use>
             </svg>
             <h4 class="heading-4">All Top Location</h4>
@@ -53,27 +53,25 @@
             </p>
         </div>
         <div class="feature">
-            <svg class="feature__icon">
+            <svg class="feature__icon heading-4--dark">
                 <use xlink:href="./img/sprite.svg#icon-presentation"></use>
             </svg>
             <h4 class="heading-4">top 1% realtors</h4>
             <p class="feature__text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus possimus earum neque quis hic vel cumque
-                obcaecati culpa itaque minima.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
             </p>
         </div>
         <div class="feature">
-            <svg class="feature__icon">
+            <svg class="feature__icon heading-4--dark">
                 <use xlink:href="./img/sprite.svg#icon-lock"></use>
             </svg>
             <h4 class="heading-4">Secure Payments on Nexture</h4>
             <p class="feature__text">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus possimus earum neque quis hic vel cumque
-                obcaecati culpa itaque minima.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus possimus earum neque quis hic.
             </p>
         </div>
         <div class="feature">
-            <svg class="feature__icon">
+            <svg class="feature__icon heading-4--dark">
                 <use xlink:href="./img/sprite.svg#icon-key"></use>
             </svg>
             <h4 class="heading-4">Move in within a week</h4>
