Story content markedup and styled

--- a/index.html
+++ b/index.html
@@ -82,10 +82,17 @@
         </div>
     </section>
     <div class="story_pictures">
-        Story Pictures
-    </div>
+        <img src="/img/story-1.jpeg" alt="Story img 1" class="story_img--1">
+        <img src="/img/story-2.jpeg" alt="Story img 2" class="story_img--2">
+    </div> 
+
     <div class="story_content">
-        Story Content
+        <h3 class="heading-3 mb-md">Happy Customers</h3>
+        <h2 class="heading-2 heading-2--dark mb-sm">&ldquo;The best decision of our lives!&rdquo;</h2>
+        <p class="story__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique accusamus reiciendis
+            at veniam dolorum ratione quisquam, delectus est eius praesentium neque ipsa, ex consequuntur obcaecati
+            commodi dolore, voluptas deserunt animi.</p>
+        <button class="btn">Find a home</button>
     </div>
     <section class="home">
         Homes
