--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="story_pictures">
         <img src="/img/story-1.jpeg" alt="Story img 1" class="story_img--1">
         <img src="/img/story-2.jpeg" alt="Story img 2" class="story_img--2">
-    </div> 
+    </div>
 
     <div class="story_content">
         <h3 class="heading-3 mb-md">Happy Customers</h3>
@@ -94,8 +94,222 @@
             commodi dolore, voluptas deserunt animi.</p>
         <button class="btn">Find a home</button>
     </div>
-    <section class="home">
-        Homes
+    <section class="homes">
+        <div class="home">
+            <img src="./img/house-1.jpeg" alt="House1" class="home__img">
+            <svg class="home__like">
+                <use xlink:href="./img/sprite.svg#icon-heart-full"></use>
+            </svg>
+            <h5 class="home__name">Beautiful Family Home</h5>
+            <div class="home__location">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-map-pin"></use>
+                </svg>
+                <p>USA</p>
+            </div>
+
+            <div class="home__rooms">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-profile-male"></use>
+                </svg>
+                <p>5</p>
+            </div>
+
+            <div class="home__area">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-expand"></use>
+                </svg>
+                <p>325 m<sup>2</sup></p>
+            </div>
+
+            <div class="home__price">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-key"></use>
+                </svg>
+                <p>$1,250,000</p>
+            </div>
+            <button class="cta">Contact Realtor</button>
+        </div>
+        <div class="home">
+            <img src="./img/house-2.jpeg" alt="House2" class="home__img">
+            <svg class="home__like">
+                <use xlink:href="./img/sprite.svg#icon-heart-full"></use>
+            </svg>
+            <h5 class="home__name">Mordern Glass Villa</h5>
+            <div class="home__location">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-map-pin"></use>
+                </svg>
+                <p>USA</p>
+            </div>
+
+            <div class="home__rooms">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-profile-male"></use>
+                </svg>
+                <p>5</p>
+            </div>
+
+            <div class="home__area">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-expand"></use>
+                </svg>
+                <p>325 m<sup>2</sup></p>
+            </div>
+
+            <div class="home__price">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-key"></use>
+                </svg>
+                <p>$1,250,000</p>
+            </div>
+            <button class="cta">Contact Realtor</button>
+
+        </div>
+        <div class="home">
+            <img src="./img/house-3.jpeg" alt="House3" class="home__img">
+            <svg class="home__like">
+                <use xlink:href="./img/sprite.svg#icon-heart-full"></use>
+            </svg>
+            <h5 class="home__name">Cozy Country House</h5>
+            <div class="home__location">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-map-pin"></use>
+                </svg>
+                <p>USA</p>
+            </div>
+
+            <div class="home__rooms">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-profile-male"></use>
+                </svg>
+                <p>5</p>
+            </div>
+
+            <div class="home__area">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-expand"></use>
+                </svg>
+                <p>325 m<sup>2</sup></p>
+            </div>
+
+            <div class="home__price">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-key"></use>
+                </svg>
+                <p>$1,250,000</p>
+            </div>
+            <button class="cta">Contact Realtor</button>
+
+        </div>
+        <div class="home">
+            <img src="./img/house-4.jpeg" alt="House4" class="home__img">
+            <svg class="home__like">
+                <use xlink:href="./img/sprite.svg#icon-heart-full"></use>
+            </svg>
+            <h5 class="home__name">Large Rustical Villa</h5>
+            <div class="home__location">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-map-pin"></use>
+                </svg>
+                <p>USA</p>
+            </div>
+
+            <div class="home__rooms">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-profile-male"></use>
+                </svg>
+                <p>5</p>
+            </div>
+
+            <div class="home__area">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-expand"></use>
+                </svg>
+                <p>325 m<sup>2</sup></p>
+            </div>
+
+            <div class="home__price">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-key"></use>
+                </svg>
+                <p>$1,250,000</p>
+            </div>
+            <button class="cta">Contact Realtor</button>
+
+        </div>
+        <div class="home">
+            <img src="./img/house-5.jpeg" alt="House5" class="home__img">
+            <svg class="home__like">
+                <use xlink:href="./img/sprite.svg#icon-heart-full"></use>
+            </svg>
+            <h5 class="home__name">Majestic Palace House</h5>
+            <div class="home__location">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-map-pin"></use>
+                </svg>
+                <p>USA</p>
+            </div>
+
+            <div class="home__rooms">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-profile-male"></use>
+                </svg>
+                <p>5</p>
+            </div>
+
+            <div class="home__area">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-expand"></use>
+                </svg>
+                <p>325 m<sup>2</sup></p>
+            </div>
+
+            <div class="home__price">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-key"></use>
+                </svg>
+                <p>$1,250,000</p>
+            </div>
+            <button class="cta">Contact Realtor</button>
+
+        </div>
+        <div class="home">
+            <img src="./img/house-6.jpeg" alt="House6" class="home__img">
+            <svg class="home__like">
+                <use xlink:href="./img/sprite.svg#icon-heart-full"></use>
+            </svg>
+            <h5 class="home__name">Mordern Family Condo</h5>
+            <div class="home__location">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-map-pin"></use>
+                </svg>
+                <p>USA</p>
+            </div>
+
+            <div class="home__rooms">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-profile-male"></use>
+                </svg>
+                <p>5</p>
+            </div>
+
+            <div class="home__area">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-expand"></use>
+                </svg>
+                <p>325 m<sup>2</sup></p>
+            </div>
+
+            <div class="home__price">
+                <svg>
+                    <use xlink:href="./img/sprite.svg#icon-key"></use>
+                </svg>
+                <p>$1,250,000</p>
+            </div>
+            <button class="cta">Contact Realtor</button>
+
+        </div>
     </section>
     <section class="gallery">
         Gallery
