Homes section styled

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </svg>
                 <p>$1,250,000</p>
             </div>
-            <button class="cta">Contact Realtor</button>
+            <button class="btn home__btn">Contact Realtor</button>
         </div>
         <div class="home">
             <img src="./img/house-2.jpeg" alt="House2" class="home__img">
@@ -163,7 +163,7 @@
                 </svg>
                 <p>$1,250,000</p>
             </div>
-            <button class="cta">Contact Realtor</button>
+            <button class="btn home__btn">Contact Realtor</button>
 
         </div>
         <div class="home">
@@ -199,7 +199,7 @@
                 </svg>
                 <p>$1,250,000</p>
             </div>
-            <button class="cta">Contact Realtor</button>
+            <button class="btn home__btn">Contact Realtor</button>
 
         </div>
         <div class="home">
@@ -235,7 +235,7 @@
                 </svg>
                 <p>$1,250,000</p>
             </div>
-            <button class="cta">Contact Realtor</button>
+            <button class="btn home__btn">Contact Realtor</button>
 
         </div>
         <div class="home">
@@ -271,7 +271,7 @@
                 </svg>
                 <p>$1,250,000</p>
             </div>
-            <button class="cta">Contact Realtor</button>
+            <button class="btn home__btn">Contact Realtor</button>
 
         </div>
         <div class="home">
@@ -307,7 +307,7 @@
                 </svg>
                 <p>$1,250,000</p>
             </div>
-            <button class="cta">Contact Realtor</button>
+            <button class="btn home__btn">Contact Realtor</button>
 
         </div>
     </section>
