--- a/index.html
+++ b/index.html
@@ -333,8 +333,7 @@
         </figure>
     </section>
     <footer class="footer">
-        <nav class="nav">
-            <ul class="nav__list">
+            <ul class="nav">
                 <li class="nav__item"><a href="#" class="nav__link">Find your Home</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Request proposal</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Download planner</a></li>
@@ -342,7 +341,10 @@
                 <li class="nav__item"><a href="#" class="nav__link">List your Property</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">Work with us</a></li>
             </ul>
-        </nav>
+
+            <p class="copyright">
+                &copy;2020 All Rights Reserved. This UI has been created under as part of the amazing <a href="https://www.udemy.com/course/advanced-css-and-sass/" class="copyright__link">CSS/Sass course by Jonas Schmedtmann</a> on Udemy. Feel free to check it out. 
+            </p>
     </footer>
 </body>
 
