--- a/index.html
+++ b/index.html
@@ -14,12 +14,41 @@
 </head>
 
 <body class="container">
-    <div class="sidebar">Sidebar</div>
+    <div class="sidebar"><button class="nav-btn"></button></div>
     <header class="header">
-        Header
+        <img src="./img/logo.png" alt="Nexter Logo" class="header__logo">
+        <h3 class="heading-3">Your own Home</h3>
+        <h1 class="heading-1">The ultimate personal freedom</h1>
+        <button class="btn header__btn">View listed properties</button>
+        <div class="header__seenon-text">Seen on</div>
+        <div class="header__seenon-logos">
+            <img src="img/logo-bbc.png" alt="logo-BBC">
+            <img src="img/logo-bi.png" alt="logo-Bi">
+            <img src="img/logo-forbes.png" alt="logo-forbes">
+            <img src="img/logo-techcrunch.png" alt="logo-techcrunch">
+        </div>
     </header>
     <div class="realtors">
-        Realtors
+        <h3 class="heading-3">Top 3 Realtors</h3>
+        <div class="realtors__list">
+            <img src="./img/realtor-1.jpeg" alt="Realtor 1" class="realtors__img">
+            <div class="realtors__details">
+                <h4 class="heading-4 heading-4-light">Raymond Llyod</h4>
+                <p class="realtors__sold">212 households sold</p>
+            </div>
+
+            <img src="./img/realtor-2.jpeg" alt="Realtor 2" class="realtors__img">
+            <div class="realtors__details">
+                <h4 class="heading-4 heading-4-light">Jennifer Kim</h4>
+                <p class="realtors__sold">212 households sold</p>
+            </div>
+
+            <img src="./img/realtor-3.jpeg" alt="Realtor 3" class="realtors__img">
+            <div class="realtors__details">
+                <h4 class="heading-4 heading-4-light">Henrey Lo</h4>
+                <p class="realtors__sold">212 households sold</p>
+            </div>
+        </div>
     </div>
     <section class="features">
         <div class="feature">
@@ -87,8 +116,8 @@
     </div>
 
     <div class="story_content">
-        <h3 class="heading-3 mb-md">Happy Customers</h3>
-        <h2 class="heading-2 heading-2--dark mb-sm">&ldquo;The best decision of our lives!&rdquo;</h2>
+        <h3 class="heading-3 mb-sm">Happy Customers</h3>
+        <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decision of our lives!&rdquo;</h2>
         <p class="story__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique accusamus reiciendis
             at veniam dolorum ratione quisquam, delectus est eius praesentium neque ipsa, ex consequuntur obcaecati
             commodi dolore, voluptas deserunt animi.</p>
